--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,8 @@
 <resources>
     <string name="app_name">SimpleApp</string>
     <string name="github_users">Github Users</string>
+    <string name="following_label">Following</string>
+    <string name="number_label">5</string>
+    <string name="followers_label">Followers</string>
+    <string name="repos_label">Repositories</string>
 </resources>
